=====NEWS ABOUT TEA====
TEA 47.1.0, may 04, 2019
---------------------------------------
http://semiletov.org/tea - official size #1
http://tea.ourproject.org - official size #1
https://github.com/psemiletov/tea-qt - development
https://vk.com/teaeditor - VK-community
https://www.facebook.com/groups/766324686841748/ - FB-community
---------------------------------------
  
   Bug fixes for good. 

   Stay tuned.
   Peter Semiletov