@@ -1,5 +1,5 @@
 ====НОВОСТИ ПРО ТИА====
-ТИА 47.1.0, 4 мая 2019
+ТИА 48.0.0, сентябрь 2019
 ---------------------------------------
 http://semiletov.org/tea - офсайт
 http://tea.ourproject.org - второй офсайт
@@ -8,7 +8,6 @@ https://vk.com/teaeditor - сообщество TEA
 https://www.facebook.com/groups/766324686841748/ - FB-сообщество
 ---------------------------------------
 
-   Буду краток - исправления ошибок.
-
+   Вот и лето пролетело. Исправлен лунный календарь и еще что-то. Основые изменения 48 версии сокрыты, а они важны. Я начал подготовку исходника к совместимости с грядущей шестой версией Qt, при сохранении совместимости с 4 и 5.
 
    С кирпичным пролетарским приветом, Петр Семилетов!
