@@ -1,7 +1,7 @@
-VERSION = 47.1.0
+VERSION = 40.0.0
 
 os2: {
-DEFINES += 'VERSION_NUMBER=\'"47.1.0"\''
+DEFINES += 'VERSION_NUMBER=\'"48.0.0"\''
 } else: {
   DEFINES += 'VERSION_NUMBER=\\\"$${VERSION}\\\"'
 }
