@@ -983,4 +983,4 @@ The reason of a non-working state: when the hidden files visibility of off, thos
 + with Additional highlighting enabled, TEA highlights the current line and pair brackers
 
 
-2008/04/12 - initial release
+2008/04/12 - initial release of TEA Qt branch
